pixel perfect Form Element

--- a/src/assets/scss/fonts.scss
+++ b/src/assets/scss/fonts.scss
@@ -16,3 +16,15 @@
         url('../fonts/OpenSans-Bold.ttf') format('trietype'),
         url('../fonts/OpenSans-Bold.svg') format('svg')
 } 
+@font-face {
+    font-family: "QuickSand-bold";
+    src:url('../fonts/Quicksand-Bold.woff') format('woff'),
+        url('../fonts/Quicksand-Bold.ttf') format('trietype'),
+        url('../fonts/Quicksand-Bold.svg') format('svg')
+} 
+@font-face {
+    font-family: "QuickSand";
+    src:url('../fonts/Quicksand-Light.woff') format('woff'),
+        url('../fonts/Quicksand-Light.ttf') format('trietype'),
+        url('../fonts/Quicksand-Light.svg') format('svg')
+} 
