--- a/src/assets/scss/position.scss
+++ b/src/assets/scss/position.scss
@@ -18,6 +18,15 @@ body {
 .p-0 {
     padding: 0 !important;
 }
+.mt-5 {
+    margin-top: 5px;
+}
+.mt-15 {
+    margin-top: 15px;
+}
+.mt-28 {
+    margin-top: 28px;
+}
 .mt-70 {
     margin-top: 70px;
 }
