--- a/src/pug/blocks/__elements/air-datepicker/two-input/two-input.scss
+++ b/src/pug/blocks/__elements/air-datepicker/two-input/two-input.scss
@@ -5,6 +5,9 @@
 .two-input_wrapper:first-child {
     padding-right: 20px;
 }
+.two-input_wrapper {
+    width: 150px;
+}
 .text-field--small {
     width: 150px;
 }
