--- a/src/pug/blocks/__elements/bullet-list/bullet-list.scss
+++ b/src/pug/blocks/__elements/bullet-list/bullet-list.scss
@@ -15,7 +15,8 @@
     }
     .bullet-list__items {
         margin-left: 20px;
-        width: 220px;
+        margin-bottom: 5px;
+        width: 232px;
         font-size: 14px;
         line-height: 24px;
         color: var(--dark-75);
