--- a/src/pug/blocks/__elements/feedback/feedback.pug
+++ b/src/pug/blocks/__elements/feedback/feedback.pug
@@ -8,4 +8,4 @@ mixin feedback(name,time,content)
     .feedback__left-elem.elem
       +like-buttons(12,'murad')
     .feedback__right-elem.elem
-      span.feedback__right-elem__content= content
+      span.feedback__right-elem__content.feedback__main= content
