--- a/src/assets/scss/vars.scss
+++ b/src/assets/scss/vars.scss
@@ -1,6 +1,8 @@
 :root {
     --montserrat_bold: 'Montserrat-bold', sans-serif;
     --montserrat_reg:  'Montserrat-regular', sans-serif;
+    --quicksand_bold:  'QuickSand-bold', sans-serif;
+    --quicksand:  'QuickSand-bold', sans-serif;
     --dark: #1F2041;
     --dark-75: rgba(31, 32, 65, 0.75);
     --dark-50: rgba(31, 32, 65, 0.5);
