--- a/src/pug/blocks/__elements/Cards.scss
+++ b/src/pug/blocks/__elements/Cards.scss
@@ -20,10 +20,10 @@
 @import './air-datepicker/two-input/two-input.scss';
 
 .template-logo {
-    margin-left: -15px;
+    margin-left: -0.9375rem;
 }
 body {
-    margin-left: 40px;
+    margin-left: 2.5rem;
     background-color: #E5E5E5;
     display: flex;
     flex-wrap: wrap;
@@ -32,9 +32,9 @@ body {
 .block {
     margin-top: rem(38);
     margin-right: rem(10);
-    margin-left: 30px;
+    margin-left: 1.875rem;
     margin-bottom: rem(20);
-    min-width: 380px;
+    min-width: 23.75rem;
     width: 25%; 
 }
 .block-card {
@@ -43,14 +43,14 @@ body {
     flex-wrap: wrap;
     align-content: flex-start;
     justify-content: space-between;
-    padding: 30px;
-    padding-top:40px;
-    width: 380px;
+    padding: 1.875rem;
+    padding-top:2.5rem;
+    width: 23.75rem;
     background-color: #FFF;
-    border: 1px solid rgba(0, 0, 0, 0.12);
+    border: 0.0625rem solid rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
-    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
+    box-shadow: 0rem 0rem 1.5625rem rgba(0, 0, 0, 0.2);
+    border-radius: 0.25rem;
 
     .auth {
         display: flex;
@@ -59,8 +59,8 @@ body {
         width: 100%;
         
         span {
-            font-size: 14px;
-            line-height: 18px;
+            font-size: 0.875rem;
+            line-height: 1.125rem;
             color: #000;
         }
     }
@@ -71,31 +71,31 @@ body {
     display: inherit;
     width: 100%;
     justify-content: space-between;
-    margin-top: 10px;
+    margin-top: 0.625rem;
 
     span {
         color: var(--dark-75);
-        max-width: 215px;
+        max-width: 13.4375rem;
         text-align: left;
         position: relative;
-        font-size: 14px;
-        line-height: 24px;
+        font-size: 0.875rem;
+        line-height: 1.5rem;
     }
     h3 {
         margin: 0;
-        font-size: 19px;
-        line-height: 24px;
+        font-size: 1.1875rem;
+        line-height: 1.5rem;
     }
     .info:after {
         content: '\1F6C8';
-        width: 30px;
-        height: 30px;
+        width: 1.875rem;
+        height: 1.875rem;
         position: absolute;
-        left: 215px;
+        left: 13.4375rem;
         top: 0;
         color: var(--dark-25);
         cursor: pointer;
-        font-size: 20px;
+        font-size: 1.25rem;
     }
     .info:hover:after {
         color: var(--dark-75);
@@ -103,7 +103,7 @@ body {
     }
     .border-bottom {
         flex-grow: 2;
-        border-bottom: 1px solid var(--dark-25);
+        border-bottom: 0.0625rem solid var(--dark-25);
         box-sizing: border-box;
     }
 }
