--- a/src/pug/blocks/__elements/dropdown/dropdown.scss
+++ b/src/pug/blocks/__elements/dropdown/dropdown.scss
@@ -3,13 +3,13 @@
     display: block;
     color: var(--dark-75);
     box-sizing: border-box;
-    padding-left: rem(15);
+    padding-left: 15px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
-    min-width: rem(200);
-    height: rem(40);
+    min-width: 200px;
+    height: 40px;
     color: var(--dark-75);
-    line-height: rem(40);
+    line-height: 40px;
     flex-basis: 100%;
     border: 1px solid var(--dark-50);
     cursor: pointer;
@@ -24,7 +24,7 @@
         left: -1px;
         right: 0;
         width: 100%;
-        z-index: 1;
+        z-index: 3;
         border: 1px solid var(--dark-50);
         border-top: 0;
         border-bottom-left-radius: 4px;
@@ -37,18 +37,19 @@
         display: inherit;
         justify-content: space-between;
         flex-basis: 100%;
-        padding: rem(7);
-
+        padding: 0 7px 2px 12px;
+        
         &__text, .items__count__text {
             cursor: default;
             border: 0;
             color: var(--dark);
-            font-family: var(--montserat_bold);
+            font-family: var(--montserrat_bold);
         }
         &__count {
-            width: rem(90);
+            width: 90px;
             cursor: pointer;
             display: inherit;
+
 
             &--style {
                 display:flex;
@@ -58,22 +59,18 @@
                 height: 30px;
                 border-radius: 50%;
                 border: 1px solid var(--dark-50);
-                line-height: rem(22);
-                font-size: 18px;
+                line-height: 22px;
+                font-size: 12px;
                 user-select: none;
-            }
-            &__minus {
-                
-            }
-            &__plus {
-    
             }
         }
     }
     .button {
         display: flex;
         justify-content: space-between;
+        align-items: center;
         flex-basis: 100%;
+        height: 40px;
     }
     .show {
         display: flex;
