--- a/src/pug/blocks/__elements/option/option.scss
+++ b/src/pug/blocks/__elements/option/option.scss
@@ -4,8 +4,8 @@
     align-items: flex-end;
     border-bottom: 1px solid rgba(31, 32, 65, 0.1);
     min-height: 60px;
-    width: 260px;
-    padding-bottom: 10px;
+    width: 280px;
+    padding-bottom: 20px;
 
     .icon {
         width: 48px;
@@ -15,10 +15,11 @@
     }
     .content {
         flex-grow: 1;
+        margin-left: 10px;
         h3, span {
             text-transform: none;
             color: var(--dark-75);
-            line-height: rem(18);
+            line-height: 14px;
             font-size: 14px;
         }
     }
