--- a/src/pug/blocks/__elements/radio-buttons/radio-buttons.scss
+++ b/src/pug/blocks/__elements/radio-buttons/radio-buttons.scss
@@ -1,7 +1,7 @@
 .radio-button {
     display: flex;
     flex-wrap: wrap;
-    flex-basis: rem(260);
+    width: 260px;
 
     h3 {
         width: 100%;
@@ -12,17 +12,24 @@
         flex-basis: 30%;
         cursor: pointer;
         position: relative;
-        padding-left: rem(30);
-        font-size: rem(13);
+        padding-left: 30px;
+        font-size: 13px;
+        margin-right: 10px;
     }
     .radio-button__input {
         display: none;
     }
+    .radio-button__text {
+        // margin-left: -5px;
+        margin-top: -2px;
+        text-transform: none;
+        letter-spacing: 1.5px;
+    }
     .radio-button__text:before {
         content: '';
         display: inline-block;
-        width: rem(20);
-        height: rem(20);
+        width: 20px;
+        height: 20px;
         position: absolute;
         left: 0;
         top: -.3rem;
@@ -39,10 +46,10 @@
     .radio-button__input:checked + .radio-button__text:after {
         content: '';
         position: absolute;
-        left: rem(4.5);
+        left: 4.5px;
         top: 0;
-        width: rem(12);
-        height: rem(12);
+        width: 12px;
+        height: 12px;
         border-radius: 50%;
         background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
     }
