--- a/src/pug/blocks/__elements/toggle/toggle.scss
+++ b/src/pug/blocks/__elements/toggle/toggle.scss
@@ -20,6 +20,7 @@
     .toggle__text {
         color: var(--dark-75);
         font-size: 14px;
+        text-transform: none;
     }
     .toggle__text:before {
         content: '';
