--- a/src/pug/blocks/__elements/cards_find/cards_find.pug
+++ b/src/pug/blocks/__elements/cards_find/cards_find.pug
@@ -1,6 +1,6 @@
 mixin cards_find
     .block-card(class= attributes.class)
-      h1 Найдем номера под ваши пожелания
+      h1 Найдём номера под ваши пожелания
       +two-input
       h3 гости
       +dropdown('People',true,'Сколько гостей')(class="arrow--down")
