--- a/src/pug/blocks/__elements/buttons/buttons.scss
+++ b/src/pug/blocks/__elements/buttons/buttons.scss
@@ -19,6 +19,8 @@
     cursor: pointer;
     color: white;
     color: var(--purple);
+    font-weight: bold;
+    font-size: 12px;
 }
 //style
 .btn--border {
@@ -53,7 +55,7 @@
 .btn--big:after {
     content: '';
     position: absolute;
-    left: 0;
+    left: 7px;
     width: 24px;
     height: 24px;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M0 0h24v24H0z' fill='none'/%3E%3Cpath d='M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z' fill='white'/%3E%3C/svg%3E");
