--- a/src/pug/blocks/__elements/dropdown/dropdown.scss
+++ b/src/pug/blocks/__elements/dropdown/dropdown.scss
@@ -37,8 +37,12 @@
         display: inherit;
         justify-content: space-between;
         flex-basis: 100%;
-        padding: 0 7px 2px 12px;
+        padding: 2px 7px 2px 12px;
+        align-items: center;
         
+        &__text {
+            text-transform: uppercase;
+        }
         &__text, .items__count__text {
             cursor: default;
             border: 0;
@@ -71,6 +75,7 @@
         align-items: center;
         flex-basis: 100%;
         height: 40px;
+        padding: 0 20px;
     }
     .show {
         display: flex;
