--- a/src/pug/blocks/__elements/footer/footer.scss
+++ b/src/pug/blocks/__elements/footer/footer.scss
@@ -4,13 +4,13 @@
     flex-wrap: wrap;
     align-items: center ;
     width: 100%;
-    height: 410px;
+    height: 445px;
     background: #FFFFFF;
     box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
     z-index: 2;
     
     .wrapper {
-        padding-top: 80px;
+        padding-top: 88px;
         width: 100%;
         display: flex;
         align-items: flex-start;
@@ -21,16 +21,24 @@
     }
     .main {
         width: 260px;
+        margin-left: 30px;
+        margin-top: -10px;
     }
     .logo {
         width: 105px;
         height: 40px;
         background-image: var(--logo);
+        margin-bottom: 17px;
+        margin-top: 10px;
+    }
+    .logo-text {
+        line-height: 24px;
+        letter-spacing: 1px;
     }
     .nav {
         display: flex;
-        width: 50%;
-        justify-content: center;
+        width: 640px;
+        margin-top: -12px;
     }
     .nav__ul {
         display: flex;
@@ -39,11 +47,15 @@
         width: 120px;
         font-size: 14px;
         align-self: baseline;
+        padding:0 40px;
+        line-height: 18px;
 
         .nav__lh {
-            font-family: var(--montserrat_bold);
-            line-height: 15px;
+            font-family: var(--montserrat_reg);
             text-transform: uppercase;
+            font-weight: bold;
+            letter-spacing: -1.2px;
+
 
             a {
                 color: var(--dark);
@@ -66,8 +78,13 @@
     }
     .subscribe {
         width: 260px;
+        letter-spacing: -0.2px;
+        margin-top: -10px;
+        .subcribe_h3 {
+            padding-bottom:7px;
+        }
 
-        span {
+        .subscribe_text {
             font-size: 14px;
             line-height: 24px;
             color: var(--dark-75);
@@ -78,15 +95,15 @@
         display: flex;
         justify-content: space-around;
         width: 100%;
-        align-items: center;
 
         span {
-            width: 40%;
+            width: 30%;
             text-align: left;
+            letter-spacing: 0.85px;
         }
         &__icon {
             align-items: center;
-            width: 40%;
+            width: 30%;
             text-align: right;
 
             i {
