--- a/src/pug/blocks/__elements/header/header.scss
+++ b/src/pug/blocks/__elements/header/header.scss
@@ -32,16 +32,19 @@
     }
     .nav {
         display: flex;
-        width: 80%;
+        width: 73%;
         justify-content: flex-end;
+        margin-top: 3px;
     }
     .nav__ul {
         display: inherit;
         list-style-type: none;
-        width: 70%;
+        width: auto;
+        height: 23px;
 
         li {
             margin-right: 30px;
+            width: auto;
         }
         .nav-link {
             text-decoration: none;
@@ -54,26 +57,44 @@
             font-family: var(--montseratt_bold);
             font-weight: 700;
         }
+        .arrow-down {
+            position: relative;
+            margin-right: 40px;
+        }
     }
     .nav__auth {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 220px;
+        width: auto;
+        margin-right: -11px;
 
+        .btn--header {
+            width: 85px;
+            height: 30px;
+        }
+        .btn--header:first-child {
+            margin-right: 10px;
+        }
         &--login {
             border-left: 2px solid rgba(31, 32, 65, 0.1);
             width: 150px;
             color: var(--dark-50);
             text-align: right;
+            margin-right: -15px;
         }
     }
 }
-.service {
-    position: relative;
-    width: 85px;
-    display: flex;
-    align-items: center;
+
+.arrow-down:after {
+    content: '';
+    position: absolute;
+    width: 20px;
+    height: 26px;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cpath d='M7.41 8.59L12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z' fill='rgba(31, 32, 65, 0.5)'/%3E%3Cpath fill='none' d='M0 0h24v24H0V0z'/%3E%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: right center;
+    right: -23px;
 }
 .header .nav.show {
     display: flex;
