--- a/src/pug/blocks/__elements/Cards.pug
+++ b/src/pug/blocks/__elements/Cards.pug
@@ -76,10 +76,10 @@ block body
 
     .block
       input.datepicker-here(data-range="true" data-multiple-dates-separator=" - " data-inline="true" style="display: none;")
-      .block-card.size-medium.mt-30.p-0
-        +slider('№888','9 900','145',true)(class="img--0")
       .block-card.size-medium.mt-40.p-0
-        +slider('№840','9 900','65',false)(class="img--1")
+        +slider('888','9 900','145',true)(class="img--0")
+      .block-card.size-medium.mt-40.p-0
+        +slider('840','9 900','65',false)(class="img--1")
 
 block footer
   script(src='../../Cards.js')
