--- a/src/pug/blocks/__elements/air-datepicker/datepicker.css
+++ b/src/pug/blocks/__elements/air-datepicker/datepicker.css
@@ -472,3 +472,18 @@
 .datepicker--pointer {
   display: none !important;
 }
+
+.datepicker--nav {
+  margin-top: 10px;
+  font-family: OpenSans;
+}
+.datepicker--days-names {
+  margin-top: 30px;
+}
+.datepicker--cells-days {
+  margin-top: 10px;
+}
+.datepicker--buttons {
+  margin-top: 6px;
+  height: 39px;
+}
