--- a/src/pug/blocks/__elements/header/header.scss
+++ b/src/pug/blocks/__elements/header/header.scss
@@ -70,7 +70,7 @@
         margin-right: -11px;
 
         .btn--header {
-            width: 85px;
+            // width: 85px;
             height: 30px;
         }
         .btn--header:first-child {
