--- a/src/pug/blocks/pages/Landing.pug
+++ b/src/pug/blocks/pages/Landing.pug
@@ -23,11 +23,19 @@ include ./../__elements/footer/footer
 include ./../__elements/cards_find/cards_find
 
 block body
-  +header
+  +header({'О нас':'', 'Услуги':'arrow-down', 'Вакансии':'', 'Новости':'','Соглашения':'arrow-down'}, '', 'ВОЙТИ', 'ЗАРЕГИСТРИРОВАТЬСЯ')
   .content
     +cards_find
     .content__text
       span Лучшие номера для вашей работы, отдыха и просто вдохновения
-  +footer
+  +footer('Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»',
+  {
+    ['навигация']:['О нас','Новости','Служба поддержки','Услуги'],
+    ['о нас']: ['О сервисе','Наша команда','Вакансии','Инвесторы'],
+    ['Служба поддержки']: ['Соглашения','Сообщества','Связь с нами'] 
+    },
+    'Подписка',
+    'Получайте специальные <br>предложения и новости сервиса'
+    )
 block footer
   script(src='../../Landing.js')
