--- a/src/pug/blocks/pages/SearchRoom.pug
+++ b/src/pug/blocks/pages/SearchRoom.pug
@@ -23,7 +23,7 @@ include ./../__elements/footer/footer
 include ./../__elements/cards_find/cards_find
 
 block body
-  +header
+  +header({'О нас':'', 'Услуги':'arrow-down', 'Вакансии':'', 'Новости':'','Соглашения':'arrow-down'}, '', 'ВОЙТИ', 'ЗАРЕГИСТРИРОВАТЬСЯ')
   .content
     .content__left-side.mt-30
       h3 Дата пребывания в отеле
@@ -74,6 +74,14 @@ block body
         .pagination
         span.pagination--text 1-12 из 100+ вариантов аренды
 
-  +footer
+  +footer('Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»',
+  {
+    ['навигация']:['О нас','Новости','Служба поддержки','Услуги'],
+    ['о нас']: ['О сервисе','Наша команда','Вакансии','Инвесторы'],
+    ['Служба поддержки']: ['Соглашения','Сообщества','Связь с нами'] 
+    },
+    'Подписка',
+    'Получайте специальные <br>предложения и новости сервиса'
+    )
 block footer
   script(src='../../SearchRoom.js')
