--- a/src/pug/blocks/__elements/buttons/buttons.scss
+++ b/src/pug/blocks/__elements/buttons/buttons.scss
@@ -13,14 +13,17 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 99px;
+    // width: 99px;
     height: 44px;
     border-radius: 22px;
     cursor: pointer;
     color: white;
     color: var(--purple);
-    font-weight: bold;
+}
+.btn_text {
+    padding: 0 20px;
     font-size: 12px;
+    font-weight: bold;
 }
 //style
 .btn--border {
@@ -32,7 +35,9 @@
 }
 .btn--fill {
     background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-    color: white;
+    .btn_text {
+        color: white !important;
+    }
 }
 .btn--enable {
     opacity: 1;
