--- a/src/pug/blocks/pages/Landing.scss
+++ b/src/pug/blocks/pages/Landing.scss
@@ -47,9 +47,9 @@ body {
             line-height: 24px;
             color: var(--dark-75);
             width: 297px;
-            margin-right: 140px;
+            margin-right: 134px;
             margin-bottom: 20px;
-            margin-top: 320px;
+            margin-top: 316px;
         }
     }
 }
@@ -75,5 +75,34 @@ body {
     }
     100% {
         background:url('../../../assets/img/background_landing_3.png');
+    }
+}
+.header .nav__ul li {
+    margin-right: 22px;
+}
+.header .nav__auth {
+    margin-right: 16px;
+}
+.block-card {
+    h1 {
+        margin-left: -1.5px;
+        margin-top: -2px;
+        letter-spacing: -0.4px;
+    }
+    .two-input_wrapper h3 {
+        margin: 21px 0 6px;
+    }
+    h3 {
+        margin: 20px 0 5px;
+    }
+    .btn--big {
+        margin-top: 35px;
+    }
+}
+
+.footer {
+    .main {
+        margin-left: 0;
+        margin-top: -13px;
     }
 }
