--- a/src/pug/blocks/pages/RoomDetails.pug
+++ b/src/pug/blocks/pages/RoomDetails.pug
@@ -24,7 +24,7 @@ include ./../__elements/chart/chart
 include ./../__elements/cards_find/cards_find
 
 block body
-  +header
+  +header({'О нас':'', 'Услуги':'arrow-down', 'Вакансии':'', 'Новости':'','Соглашения':'arrow-down'}, '', 'ВОЙТИ', 'ЗАРЕГИСТРИРОВАТЬСЯ')
   .RoomDetails
     .RoomDetails__img
       .img-big
@@ -56,9 +56,9 @@ block body
           span Бесплатная отмена в течение 48 ч. После этого при отмене не позднее чем за 5 дн. до прибытия вы получите полный возврат за вычетом сбора за услуги.
       .RoomDetails__right-side.mt-70
         .block-card
-          h1.number № 8 8 8 
+          h1 <span class="number_span">№</span> 888 
             span.number люкс
-          span.number <span class="number--bold">9 990&#8381;</span> в сутки
+          span.num <span class="num-bold">9 990&#8381;</span> в сутки
           +two-input
           h3 гости
           +dropdown('People',true,'3 гостя')(class="arrow--down")
@@ -76,6 +76,14 @@ block body
             .border-bottom
             h3 38 081₽
           +button('ЗАБРОНИРОВАТЬ')(class=['btn--fill','btn--big','mt-30'])
-  +footer
+  +footer('Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды»',
+  {
+    ['навигация']:['О нас','Новости','Служба поддержки','Услуги'],
+    ['о нас']: ['О сервисе','Наша команда','Вакансии','Инвесторы'],
+    ['Служба поддержки']: ['Соглашения','Сообщества','Связь с нами'] 
+    },
+    'Подписка',
+    'Получайте специальные <br>предложения и новости сервиса'
+    )
 block footer
   script(src='../../RoomDetails.js')
